--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
 <head>
 <title>Packin' Profit</title>
-<script src="game.js"></script>
+<script type="text/javascript" src="main.js"></script>
 <link rel="stylesheet" href="style.css">
 </head>
   <body>
+    <div class="worker"></div>
+    <div class="box"></div>
+    <div class="shop"></div>
+    <div class="game"></div>
+    <div class="rushhour"><div>
+      <div id="Workers">
+        <button class = "worker" type = "button" onClick = "levelWorker(0)"><span id="0T">Buy</span> Packer <br><b>Cost: <span id="0C">200</span></b><br><i>Rank: <span id="0A">0</span></i></button>
   </body>
 </html>
