--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <div class="rushhour"><div>
       <div id="Workers">
         <button class = "worker" type = "button" onClick = "levelWorker(0)"><span id="0T">Buy</span> Packer <br><b>Cost: <span id="0C">200</span></b><br><i>Rank: <span id="0A">0</span></i></button>
+      </div>
   </body>
 </html>
