--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="style.css">
 </head>
   <body>
+    Coins: <span id="coins">0</span>
+    Holy Boxes: <span id="holyboxes">0</span>
     <div class="worker"></div>
     <div class="box"></div>
     <div class="shop"></div>
