--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="game"></div>
     <div class="rushhour"><div>
       <div id="Workers">
-        <button class = "worker" type = "button" onClick = "levelWorker(0)"><span id="0T">Buy</span> Packer <br><b>Cost: <span id="0C">200</span></b><br><i>Rank: <span id="0A">0</span></i></button>
+        <span id="packer">0</span>
+        <button onclick="buyPacker()">Packer</button>
+        Packer Cost: <span id="packerCost">200</span>
       </div>
   </body>
 </html>
