--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <span id="packer">0</span>
         <button onclick="buyPacker()">Packer</button>
         Packer Cost: <span id="packerCost">200</span>
+         <span id="robot">0</span>
+        <button onclick="buyRobot()">Robot</button>
+        Packer Cost: <span id="robotCost">8000</span>
       </div>
   </body>
 </html>
