--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         <span id="packer">0</span>
         <button onclick="buyPacker()">Packer</button>
         Packer Cost: <span id="packerCost">200</span>
-         <span id="robot">0</span>
+        Coins per second: <span id="packerCoins">10</span>
+        <span id="robot">0</span>
         <button onclick="buyRobot()">Robot</button>
-        Packer Cost: <span id="robotCost">8000</span>
+        Robot Cost: <span id="robotCost">8000</span>
+        Coins per second: <span id="robotCoins">200</span>
       </div>
   </body>
 </html>
