--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     Coins: <span id="coins">0</span>
     Holy Boxes: <span id="holyboxes">0</span>
+    <button onclick="coinClick(1)">Pack!</button>
     <div class="worker"></div>
     <div class="box"></div>
     <div class="shop"></div>
