--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <button onclick="buyPacker()">Packer</button>
         <br><br>
         Packer Cost: <span id="packerCost">200</span>
+        Coins per second: <span id="packerCoins">10</span>
         <br><br>
         <span id="robot">0</span>
         <br><br>
