--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
         <br><br>
         Coins per second: <span id="robotCoins">200</span>
       </div>
+      <div id="Upgrades">
+      </div>
   </body>
 </html>
