--- a/index.html
+++ b/index.html
@@ -1,36 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
+<script src="/cdn-cgi/apps/head/0qgk9sTk1hPaj4RmmbOPMlTGE6w.js"></script>
+<script src="workers.js"></script>
+<script src="main.js"></script>
+<script src="shops.js"></script>
+<script src="boxes.js"></script>
+<link rel="stylesheet" href="css/style.css">
 <title>Packin' Profit</title>
-<script type="text/javascript" src="main.js"></script>
-<link rel="stylesheet" href="style.css">
 </head>
-  <body>
-    Coins: <span id="coins">0</span>
-    Holy Boxes: <span id="holyboxes">0</span>
-    <button onclick="coinClick(1)">Pack!</button>
-    <div class="worker"></div>
-    <div class="box"></div>
-    <div class="shop"></div>
-    <div class="game"></div>
-    <div class="rushhour"><div>
-      <div id="Workers">
-        <span id="packer">0</span>
-        <br><br>
-        <button onclick="buyPacker()">Packer</button>
-        <br><br>
-        Packer Cost: <span id="packerCost">100</span>
-        <br><br>
-        Coins per second: <span id="packerCoins">10</span>
-        <br><br>
-        <span id="robot">0</span>
-        <br><br>
-        <button onclick="buyRobot()">Robot</button>
-        <br><br>
-        Robot Cost: <span id="robotCost">5000</span>
-        <br><br>
-        Coins per second: <span id="robotCoins">250</span>
-      </div>
-      <div id="Upgrades">
-      </div>
-  </body>
 </html>
