--- a/index.html
+++ b/index.html
@@ -9,4 +9,10 @@
 <link rel="stylesheet" href="css/style.css">
 <title>Packin' Profit</title>
 </head>
+<body>
+  <span id="packer">0</span>
+  <button onclick="buyPacker()">Packer</button>
+  <span id="robot">0</span>
+  <button onclick="buyRobot()">Robot</button>
+</body>
 </html>
