--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 <title>Packin' Profit</title>
 </head>
 <body>
+  <span id="coins">0</span>
+  <span id="holyboxes">0</span>
+  <br><br>
   <span id="packer">0</span>
   <button onclick="buyPacker()">Packer</button>
+  <br><br>
   <span id="robot">0</span>
   <button onclick="buyRobot()">Robot</button>
+  <br><br>
 </body>
 </html>
