--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   <br><br>
   <span id="packer">0</span>
   <button onclick="buyPacker()">Packer</button>
+  <p>Cost:</p><span id="packerCost">200</span>
   <br><br>
   <span id="robot">0</span>
   <button onclick="buyRobot()">Robot</button>
+  <p>Cost:</p><span id="robotCost">50000</span>
   <br><br>
 </body>
 </html>
