--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <title>Packin' Profit</title>
 </head>
 <body>
-  <span id="coins">0</span>
-  <span id="holyboxes">0</span>
+  <b>Coins:</b><span id="coins">0</span>
+  <b>Holy Boxes:</b><span id="holyboxes">0</span>
   <br><br>
   <span id="packer">0</span>
   <button onclick="buyPacker()">Packer</button>
