--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <br>
   <span id="packer">0</span>
   <button onclick="buyPacker()">Packer</button>
-  <p>Cost:</p><span id="packerCost">200</span>
+  Cost: <span id="packerCost">200</span>
   <br>
   <span id="robot">0</span>
   <button onclick="buyRobot()">Robot</button>
-  <p>Cost:</p><span id="robotCost">50000</span>
+  Cost: <span id="robotCost">50000</span>
   <br>
 </body>
 </html>
