--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <script src="/cdn-cgi/apps/head/0qgk9sTk1hPaj4RmmbOPMlTGE6w.js"></script>
 <script src="workers.js"></script>
 <script src="main.js"></script>
-<script src="shops.js"></script>
-<script src="boxes.js"></script>
 <link rel="stylesheet" href="css/style.css">
 <title>Packin' Profit</title>
 </head>
 <body>
   <b>Coins:</b><span id="coins">0</span>
   <b>Holy Boxes:</b><span id="holyboxes">0</span>
+  <br>
+  <button onclick="coinClick(1)">Pack!</button>
   <br>
   <span id="packer">0</span>
   <button onclick="buyPacker()">Packer</button>
