--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
-<!DOCTYPE html>
 <html>
-<head>
-<script src="workers.js"></script>
-<script src="main.js"></script>
-<link rel="stylesheet" href="css/style.css">
-<title>Packin' Profit</title>
-</head>
-<body>
-  <b>Coins:</b> <span id="coins">0</span>
-  <b>Holy Boxes:</b> <span id="holyboxes">0</span>
-  <br>
-  <button onclick="coinClick(1)">Pack!</button>
-  <br>
-  <span id="packer">0</span>
-  <button onclick="buyPacker()">Packer</button>
-  Cost: <span id="packerCost">200</span>
-  <br>
-  <span id="robot">0</span>
-  <button onclick="buyRobot()">Robot</button>
-  Cost: <span id="robotCost">50000</span>
-  <br>
-</body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="interface.css"/>
+    <script src="main.js"></script>
+		<script src="workers.js"></script>
+	  <script src="//cdn.rawgit.com/erosson/swarm-numberformat/v0.1.0/dist/swarm-numberformat.js"></script>
+	</head>
+	<body>
+		<button onclick="coinClick(1)">Pack!</button>
+		<br>
+		Coins: <span id="coins">0</span>
+		<br>
+    Holy Boxes: <span id="holyboxes">0</span>
+    <br>
+		<button onclick="buyPacker()">Packer</button>
+		<br>
+		Packers: <span id="packers">0</span>
+		<br>
+		Packer Cost: <span id="packerCost">200</span>
+	</body>
 </html>
