--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<link rel="stylesheet" type="text/css" href="interface.css"/>
                 <script src="main.js"></script>
 		<script src="workers.js"></script>
+		<script src="boxes.js"></script>
 	        <script src="//cdn.rawgit.com/erosson/swarm-numberformat/v0.1.0/dist/swarm-numberformat.js"></script>
 	</head>
 	<body>
