--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
 		Packers: <span id="packers">0</span>
 		<br>
 		Packer Cost: <span id="packerCost">200</span>
+		<br>
+		Pizza Boxes: <span id="pizzaboxes">0</span>
+		<br>
+		Pizza Box Cost: <span id="pizzaboxCost">100</span>
 	</body>
 </html>
