--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 		<br>
 		Packer Cost: <span id="packerCost">200</span>
 		<br>
+		<button onclick="buyPizzaBox()">Pizza Box</button>
+		<br>
 		Pizza Boxes: <span id="pizzaboxes">0</span>
 		<br>
 		Pizza Box Cost: <span id="pizzaboxCost">100</span>
