--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
 		Pizza Boxes: <span id="pizzaboxes">0</span>
 		<br>
 		Pizza Box Cost: <span id="pizzaboxCost">50</span>
+		<br>
+		Coins per click: <span id="pizzaboxCoins">1</span>
 	</body>
 </html>
