--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<br>
 		Packer Cost: <span id="packerCost">100</span>
 		<br>
-		Coins per second: <span id="packerCoins">0</span>
+		Coins per second: <span id="packerCPS">0</span>
 		<br>
 		<button onclick="buyPizzaBox()">Pizza Box</button>
 		<br>
@@ -26,6 +26,6 @@
 		<br>
 		Pizza Box Cost: <span id="pizzaboxCost">50</span>
 		<br>
-		Coins per click: <span id="pizzaboxCoins">0</span>
+		Coins per click: <span id="pizzaboxCPC">0</span>
 	</body>
 </html>
