--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<b>Coins: <span id="coins"></span></b><br>
-		Cookies produced: <span id="cookies_produced"></span><br>
+		Coins total: <span id="coins_produced"></span><br>
 		<button onclick="clicker.click();">Pack!</button><br><br>
 	</body>
 </html>
