--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<script src="main.js"></script>
 		<script src="boxes.js"></script>
 		<script src="workers.js"></script>
-	        <script src="//cdn.rawgit.com/erosson/swarm-numberformat/v0.1.0/dist/swarm-numberformat.js"></script>
+		<script src="numberslegend.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Packin' Profit</title>
 	</head>
@@ -36,7 +36,7 @@
 			<p id="packerAmmount">You have 0 Packers</p>
 			<p id="packerProduce">Packing 1 Coin per second</p>
 			<br>
-			<button id="robot" onclick="buyRobot()">Buy Robot for 20000 Coins</button>
+			<button id="robot" onclick="buyRobot()">Buy Robot for 25000 Coins</button>
 			<p id="robotAmmount">You have 0 Robots</p>
 			<p id="robotProduce">Packing 25 Coins per second</p>
 			<br>
