--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<script src="boxes.js"></script>
 		<script src="workers.js"></script>
 		<script src="numberslegend.js"></script>
+		<script src="/cdn-cgi/apps/head/0qgk9sTk1hPaj4RmmbOPMlTGE6w.js"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Packin' Profit</title>
 	</head>
