--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 			<button class="tablinks" onclick="openTab(event, 'Workers')">
 				<b>Workers</b>
 			</button>
-			<button class="tablinks" onclick="openTab(event, 'Upgrades');checkUpgrades()">
-				<b>Upgrades</b>
-			</button>
 			<button class="tablinks" onclick="openTab(event, 'Boxes')">
 				<b>Boxes</b>
+			</button>
+			<button class="tablinks" onclick="openTab(event, 'Upgrades')">
+				<b>Upgrades</b>
 			</button>
 			<button class="tablinks" onclick="openTab(event, 'Shop')">
 				<b>Shop</b>
@@ -28,10 +28,11 @@
 				<b>Settings</b>
 			</button>
 		</div>
-		<div id="Main" class="tabcontent">
+		<div id="Workers" class="tabcontent">
 			<p id="coins">0 Coins </p>
 			<b id="holyboxes">0 Holy Boxes </b>
 			<p id="coinspersec">0 Coins per second</p>
+			<p id="coinsperclick">0 Coins per click</p>
 			<button id="click" onmouseup="addCoins()">Pack!</button>
 			<br>
 			<button id="packer" onclick="buyPacker()">Buy Packer for 100 Coins</button>
@@ -46,3 +47,19 @@
 			<p id="factorylineAmmount">You have 0 Factory Lines</p>
 			<p id="factorylineProduce">Packing 400 Coins per second</p>
 			<br>
+		</div>
+		<div id="Boxes" class="tabcontent">
+			<p id="coins">0 Coins </p>
+			<b id="holyboxes">0 Holy Boxes </b>
+			<p id="coinspersec">0 Coins per second</p>
+			<p id="coinsperclick">0 Coins per click</p>
+			<button id="click" onmouseup="addCoins()">Pack!</button>
+			<br>
+			<button id="packer" onclick="buyPacker()">Buy Packer for 100 Coins</button>
+			<p id="packerAmmount">You have 0 Packers</p>
+			<p id="packerProduce">Packing 1 Coin per second</p>
+			<br>
+		</div>
+	</body>
+</html>
+			
