--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 			<p id="coinsperclick">0 Coins per click</p>
 			<button id="click" onmouseup="addCoins()">Pack!</button>
 			<br>
-			<button id="packer" onclick="buyPacker()">Buy Packer for 100 Coins</button>
-			<p id="packerAmmount">You have 0 Packers</p>
-			<p id="packerProduce">Packing 1 Coin per second</p>
+			<button id="pizzabox" onclick="buyPizzaBox()">Buy Pizza Box for 50 Coins</button>
+			<p id="pizzaboxAmmount">You have 0 Pizza Boxes</p>
+			<p id="pizzaboxProduce">Packing 1 Coin per click</p>
 			<br>
 		</div>
 	</body>
