--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
 			<p id="pizzaboxProduce">Packing 1 Coin per click</p>
 			<br>
 		</div>
+		<div id="Settings" class="tabcontent">
+			<div id="mainSettings">
+				<p>Input refresh rate if needed.</p>
+				<input type="number" id="refreshRate" value=100>
+				<button onclick="refreshRate()">Update rate</button>
+			</div>
+		</div>
 	</body>
 </html>
 			
