--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<script src="main.js"></script>
 		<script src="boxes.js"></script>
 		<script src="workers.js"></script>
+		<script src="numberslegend.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Packin' Profit</title>
 	</head>
@@ -26,10 +27,9 @@
 			</button>
 		</div>
 		<div id="Workers" class="tabcontent">
-			<p id="coins">0 Coins </p>
-			<b id="holyboxes">0 Holy Boxes </b>
+			<p id="coins">0 Coins</p>
+			<b id="holyboxes">0 Holy Boxes</b>
 			<p id="coinspersec">0 Coins per second</p>
-			<p id="coinsperclick">1 Coins per click</p>
 			<button id="click" onmouseup="addCoins()">Pack!</button>
 			<br>
 			<button id="packer" onclick="buyPacker()">Buy Packer for 100 Coins</button>
@@ -46,10 +46,9 @@
 			<br>
 		</div>
 		<div id="Boxes" class="tabcontent">
-			<p id="coins">0 Coins </p>
-			<b id="holyboxes">0 Holy Boxes </b>
+			<p id="coins">0 Coins</p>
+			<b id="holyboxes">0 Holy Boxes</b>
 			<p id="coinspersec">0 Coins per second</p>
-			<p id="coinsperclick">1 Coins per click</p>
 			<button id="click" onmouseup="addCoins()">Pack!</button>
 			<br>
 			<button id="pizzabox" onclick="buyPizzaBox()">Buy Pizza Box for 50 Coins</button>
