--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<script src="boxes.js"></script>
 		<script src="workers.js"></script>
 		<script src="numberslegend.js"></script>
+		<script src="//cdn.jsdelivr.net/gh/keanu246/numberformat@v0.6.0/dist/swarm-numberformat.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Packin' Profit</title>
 	</head>
