--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 			<p id="pizzaboxAmmount">You have 0 Pizza Boxes</p>
 			<p id="pizzaboxProduce">Packing 1 Coin per click</p>
 			<br>
+			<button id="cardboardbox" onclick="buyCardboardBox()">Buy Cardboard Box for 10000 Coins</button>
+			<p id="pizzaboxAmmount">You have 0 Cardboard Boxes</p>
+			<p id="pizzaboxProduce">Packing 20 Coins per click</p>
+			<br>
+			<button id="reinforcedbox" onclick="buyReinforcedBox()">Buy Reinforced Box for 750000 Coins</button>
+			<p id="reinforcedboxAmmount">You have 0 Reinforced Boxes</p>
+			<p id="reinforcedboxProduce">Packing 150 Coins per click</p>
+			<br>
 		</div>
 		<div id="Settings" class="tabcontent">
 			<div id="mainSettings">
